RESOLVED FIXED105019
Web Inspector: optional parameters of protocol commands should go after required ones
https://bugs.webkit.org/show_bug.cgi?id=105019
Summary Web Inspector: optional parameters of protocol commands should go after requi...
Yury Semikhatsky
Reported 2012-12-14 06:50:10 PST
Input.dispatchMouseEvent declaration breaks this rule which leads to the following closure compiler error: .... Source/WebCore/inspector/front-end/protocol-externs.js:2939: WARNING - optional arguments must be at the end InputAgent.dispatchMouseEvent = function(type, opt_modifiers, opt_timestamp, opt_button, opt_clickCount, x, y, opt_callback) {} ^ ...
Attachments
Patch (5.33 KB, patch)
2012-12-14 06:52 PST, Yury Semikhatsky
no flags
Yury Semikhatsky
Comment 1 2012-12-14 06:52:37 PST
Yury Semikhatsky
Comment 2 2012-12-14 06:53:53 PST
Alternatively we could make CodeGeneratorInspector.py rearrange parameters so that optional would go after required ones.
WebKit Review Bot
Comment 3 2012-12-14 09:22:22 PST
Comment on attachment 179475 [details] Patch Clearing flags on attachment: 179475 Committed r137751: <http://trac.webkit.org/changeset/137751>
WebKit Review Bot
Comment 4 2012-12-14 09:22:26 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.