Web Inspector: optional parameters of protocol commands should go after required ones https://bugs.webkit.org/show_bug.cgi?id=105019

Reviewed by Pavel Feldman.

* inspector/Inspector.json: Moved required x and y parameters declaration before
optional ones.
* inspector/InspectorInputAgent.cpp:
(WebCore::InspectorInputAgent::dispatchMouseEvent):
* inspector/InspectorInputAgent.h:
(InspectorInputAgent):


Canonical link: https://commits.webkit.org/123272@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@137751 268f45cc-cd09-0410-ab3c-d52691b4dbfc